--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>1+ years <br /> Back-End Development</p>
+              <p>6+ months <br /> Back-End Development</p>
             </div>
             <div class="details-container">
               <img
