--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('https://drive.google.com/file/d/1aJNzRQDWclhNn_G08mV6DSmZRgFgLFk3/view?usp=drive_link')"
+            onclick="window.open('https://drive.google.com/file/d/17zGOHaXZceGgZKORNeSTtLMc87wO_cXn/view?usp=drive_link')"
           >
             Download Resume
           </button>
@@ -383,7 +383,7 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:ashikaslam0000@gmail.com">ashikaslam0000@gmail.com</a></p>
+          <p><a href="mailto:md.ashik.aslam24@gmail.com">md.ashik.aslam24@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
